Added some style changes and a new page

--- a/about.html
+++ b/about.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Head content is the same -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HIBRID Fitness Program</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <!-- Header content is the same -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About HIBRID</a></li>
+                <li><a href="programs.html">Programs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="about">
@@ -15,7 +25,7 @@
     </section>
 
     <footer>
-        <!-- Footer content is the same -->
+        <p>&copy; 2023 HIBRID Fitness Program</p>
     </footer>
 </body>
 </html>
