--- a/start.html
+++ b/start.html
@@ -18,11 +18,14 @@
         </nav>
     </header>
 
-    <section id="contact">
-        <h1>Contact Us</h1>
-        <p>Have questions or need personalized advice? Reach out to us!</p>
-        <form>
-            <!-- Contact form elements like name, email, message, etc. -->
+    <section id="get-started">
+        <h1>Let's Get Started!</h1>
+        <p>First, we need some information from you.</p>
+        
+        <form id="start-form">
+            <label for="username">Your Name:</label>
+            <input type="text" id="username" name="username" required>
+            <button type="submit">Submit</button>
         </form>
     </section>
 
